--- a/web-html5/src/main/webapp/resources/parleys/parleysIpadPortrait.css
+++ b/web-html5/src/main/webapp/resources/parleys/parleysIpadPortrait.css
@@ -76,5 +76,5 @@ div#upperPhotoContainer .featuredPhotoinfo h3 {
 }
 
 div#mainContent {
-    height: 600px;
+    height: 780px;
 }
